--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         - Create a USER BOARD with 24 randomized numbers that highlights as the main board does
         - Let the user choose HOW MANY user boards he's willing to play with and create them.
     -->
-  <head></head>
-  <body></body>
+  <head>
+    <title>Bingo Board</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <h1>Bingo Board</h1>
+    <div id='bingoBoard-container'>
+      <!-- Numbers are generated from Js -->
+    </div>
+  </body>
 </html>
