--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <div id='bingoBoard-container'>
       <!-- Numbers are generated from Js -->
     </div>
+    <button onclick='selectNumber()'></button>
   </body>
 </html>
